--- a/project1.Rmd
+++ b/project1.Rmd
@@ -7,6 +7,7 @@ date: "2024-07-23"
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(ggplot2)
+library(dplyr)
 ```
 
 ## Import and summarize data
@@ -45,12 +46,130 @@ head(all_data)
 dim(all_data) #should be 126 x 111 (100 genes, 11 cols of metadata for all 126 samples)
 ```
 ```{r}
-ggplot(data = all_data, aes(A1BG)) +
-  geom_histogram()
-```
-```{r}
+all_data_long <- all_data %>% tidyr::gather(key = Gene, value = count, 1:100)
+all_data_long
+
+interesting_genes <- c('AAAS', 'AAACS', 'A2M', 'AAGAB','AAK1','ABCD1','ABCG1', 'ABHD17A', 'ABHD17A','ABI1','AAMP', 'AATK','ABAT',
+                       'ABCA1','ABCB10','ABHD13','ABHD14','ABHD3')
+length(interesting_genes)
+#colnames(all_data[101:111])
+curated_genes_long <- all_data_long %>% dplyr::filter(Gene %in% interesting_genes)
+
+#used to look for interesting genes
+ggplot(all_data_long[(126*90):(126*100),], aes(x = Gene, y = count, color = disease_status)) +
+  geom_boxplot() +
+  theme(
+    axis.text.x = element_text(angle = 90),
+    legend.position = 'top')
+
 
 ```
+
+
+```{r}
+#histogram
+mean_count <- round(mean(all_data$ABHD17A),3)
+sd_count <- round(sd(all_data$ABHD17A),3)
+
+
+ggplot(all_data, aes(ABHD17A)) +
+  geom_histogram(bins = 30 , color = 'purple1', fill = 'slateblue1') +
+  theme_minimal() +
+  theme(plot.title = element_text(hjust = .4, size = 20)) +
+  labs(title = 'Distribution of ABHD17A count across samples', x = 'ABHD17A Count', y = 'Frequency', size = 20) +
+  scale_fill_manual(values = c('purple1')) +
+  annotate(geom = 'text', x = 30, y = 12, label = paste('N:', length(all_data$ABHD17A),' samples', '\nMean count: ', mean_count, '\nsd: ', sd_count))
+
+```
+
+```{r}
+
+#scatterplot 
+colorPalette <- c('violetred', 'grey28')
+
+all_data$crp.mg.l. <- as.numeric(all_data$crp.mg.l.)
+ggplot(all_data %>% filter(crp.mg.l. != ' unknown') %>% dplyr::arrange(crp.mg.l.), aes(x = crp.mg.l. , y =  ABHD17A , color = disease_status)) +
+  geom_point() +
+  theme(
+    axis.text.x = element_text(angle=90),
+    plot.title = element_text(hjust = .4, size = 20),
+    legend.position = 'bottom'
+  ) +
+  labs(title = 'CRP levels vs ABHD17A count', x = 'CRP Level (mg/L)', y = 'ABHD17A count') +
+  scale_color_manual(labels = c('COVID', 'NOT COVID '), values = colorPalette) 
+  
+
+```
+
+```{r}
+
+#two categorical 
+dplyr::filter(curated_genes_long, Gene == 'ABHD17A') %>% 
+  ggplot(aes(x = disease_status, y = count, fill = mechanical_ventilation)) +
+  geom_boxplot() +
+  theme_minimal() + 
+  theme(legend.position = 'bottom') +
+  labs(title = 'Comparing ABHD17A levels across disease status and mechanical ventilation', x = 'Disease Status', y = 'ABHD17A count') +
+  scale_fill_manual(labels = c('no ventilator', 'ventilator'), values = c('ghostwhite', 'mediumvioletred')) +
+  scale_x_discrete(labels = c('COVID', 'NON-COVID'))
+
+```
+
+
+
+
+
+ggplot(curated_genes_long[1:(126*8),], aes(x = Gene, y = count, fill = disease_status)) +
+  geom_boxplot() +
+  scale_fill_manual(labels = c('yes', 'no'),values = c('red', 'purple')) +
+  theme(
+    axis.text.x = element_text(angle = 90),
+    legend.position = 'top')
+
+ggplot(curated_genes_long[1:(126*8),], aes(x = Gene, y = count, fill = mechanical_ventilation)) +
+  geom_boxplot() +
+  scale_fill_manual(values = c('purple', 'red')) +
+  theme(
+    axis.text.x = element_text(angle = 90),
+    legend.position = 'top')
+
+
+
+
+
+
+
+
+
+
+
+
+
+###silly side project but not working :(
+normalize <- function(vector){
+  avg <- mean(vector)
+  sd <- sd(vector)
+  return(round(((vector-avg)/sd), 3))
+}
+
+normalized_genes <- all_data[,1:100] %>% dplyr::mutate_each(normalize)
+head(normalized_genes)
+
+```
+
+#install.packages("corrr")
+library('corrr')
+#install.packages("ggcorrplot")
+library(ggcorrplot)
+#install.packages("FactoMineR")
+library("FactoMineR")
+```
+
+head(normalized_genes)
+genes.pca <- prcomp(normalized_genes[1:10,1:10])
+summary(genes.pca)
+
+
 
 
 
